Bug 1227216. Part 1: Only draw surface on inset box shadows if dest and src are equal sizes. r=mstange